proxy_apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  ports:
    - port: 80
  type: ExternalName
  externalName: 192.168.0.80
